# VoltQuest

./: ASSET_LICENSE.md  CMakeLists.txt
docs/: dev-guide.md
include/: file_manager.hpp  input_manager.hpp  level_manager.hpp  path_utils.hpp  settings.hpp  texture_manager.hpp  ui_manager.hpp
include/game_objects/: movable_object.hpp
include/game_objects/electronic_components/: active_components.hpp  electronics_base.hpp  passive_components.hpp  power_sources.hpp  wire.hpp
include/simulation/: electronics_simulation.hpp
src/: input_manager.cpp  level_manager.cpp  main.cpp  screen_manager.cpp  settings.cpp  texture_manager.cpp  ui_manager.cpp  window_manager.cpp
src/simulation/: electronics_simulation.cpp
